# term-todo-list

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.bat  compile_commands.json  compile_linux.sh
.cache/clangd/index/: app.cpp.2E7825928A78C89B.idx  app.h.48940B59A08524A4.idx  main.cpp.4864AF1FF87753D0.idx
todolist/src/: main.cpp
todolist/src/App/: app.cpp  app.h
todolist/src/App/CommandLine/: commandLine.cpp  commandLine.h
todolist/src/Render/: renderable.cpp  renderable.h  renderer.cpp  renderer.h
todolist/src/Utility/: Vector2.h
